Fix Model, API, and tests errors

--- a/.gitignore
+++ b/.gitignore
@@ -197,8 +197,8 @@ cython_debug/
 *.avi
 *.png
 *.jpg
-*/epoch0.pt
-*/epoch10.pt
-*/epoch20.pt
-*/epoch30.pt
-*/epoch40.pt
+**/epoch0.pt
+**/epoch10.pt
+**/epoch20.pt
+**/epoch30.pt
+**/epoch40.pt
